correctly centered show page comment divs so that they align to rest of page

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,9 +1,9 @@
 html {
   background: linear-gradient(-45deg,
-  #d2d2d2,
+  #ffffff,
    rgb(116, 200, 251),
    #d2d2d2,
-   #9e9d9d
+   #ffffff
   );
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
@@ -120,6 +120,12 @@ h1.homeLink {
   font-weight: 800;
   background-color: transparent;
 }
+.TheTweet{
+  width: 425px
+}
+.image{
+  width: 425px;
+}
 .form {
   width: 500px;
   border: solid 1px rgba(0, 0, 0, 0.4);
@@ -183,6 +189,10 @@ textarea {
   border-top: solid 0.5px black;
   padding: 5px;
 }
+.commentDivs{
+  position: block;
+  margin: 0;
+}
 
 h1.tweetName {
   margin: 0;
@@ -222,12 +232,15 @@ div.tweet {
   .twitterBird{
     margin-left: 10px;
   }
+  .person, .TheTweet, .image{
+    width: 330px;
+  }
 }
 
 @media only screen and (max-width: 450px) {
   html{
     display: block;
-    margin-left: 50px;
+    margin-left: 20px;
   }
   img{
     width: 30px;
@@ -236,13 +249,40 @@ div.tweet {
   .tweet-card, .form{
     width: 300px;
   }
-  .tweetCardPerson, .tweetCardTitle{
-    margin: 0
+  .tweetCardPerson, .tweetCardTitle {
+    margin: 0;
+    display: flex;
+    align-self: center;
+    font-size: 14px;
   }
   .tweetCardTitle{
     margin: 0 0 10px 40px;
   }
-  .TheTweet{
+  .TheTweet, .image{
     margin-left: 40px
   }
+  .person, .TheTweet, .image{
+    width: 260px;
+  }
+.TheTweet{
+  font-size: 18px;
+  height: 60px
+}
+.tweetCharCount{
+  font-size: 12px;
+}
+.nav{
+  height: 40px
+}
+.homeLink{
+  font-size: 20px;
+  margin: 0;
+  align-self: center;
+}
+.TweetButton, .updateButton, .CommentButton{
+  padding: 5px 5px;
+  margin: 5px 5px;
+  font-size: 12px;
+  border-radius: 20px;
+}
 }
