--- a/src/pages/Tweet/Tweet-List.css
+++ b/src/pages/Tweet/Tweet-List.css
@@ -1,21 +1,16 @@
 .returnSection{
-    display: block;
-    margin: 0 auto;
     display: flex;
-    position:fixed sticky;
     width: 100%;
     font-family: 'Noto Sans JP', sans-serif;    
-    width: 500px;
+    align-self: center;
 
 }
-
 .commentFormSection{
     width: 500px;
     padding: 5px;
     border: .5px solid black;
     display: block;
     margin: 0 auto;
-    height: 150px;
 }
 .commentInputFields{
     display: flex;
@@ -92,4 +87,7 @@ padding-left: 5px;
   }
 
   @media only screen and (max-width: 450px) {
+    .returnSection{
+      width: 400px
+    }
   }
